--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "exports": {
         ".": {
             "types": "./dist/index.d.ts",
-            "svelte": "./dist/index.js"
+            "svelte": "./dist/index.js",
+            "Chessground.svelte": "./dist/Chessground.svelte"
         }
     },
     "files": [
