--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "chessground-svelte",
-    "version": "0.0.73",
+    "version": "0.0.74",
     "scripts": {
         "dev": "vite dev",
         "build": "vite build && npm run package",
@@ -34,6 +34,7 @@
         "@sveltejs/package": "^2.3.1",
         "@sveltejs/vite-plugin-svelte": "^3.1.1",
         "@types/eslint": "^8.56.10",
+        "chessops": "^0.14.1",
         "eslint": "^9.4.0",
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-svelte": "^2.39.0",
